--- a/src/main/resources/templates/admin/article/new.html
+++ b/src/main/resources/templates/admin/article/new.html
@@ -117,6 +117,7 @@
     </div>
 </div>
 #include('./_footer.html')
+<script src="/static/admin/js/base64.js" ></script>
 <script src="/static/admin/js/new_article.js?v=${version}" ></script>
 </body>
 </html>
