[feature] 增加mathjax支持，暂时有bug

--- a/src/main/resources/templates/admin/article/_header.html
+++ b/src/main/resources/templates/admin/article/_header.html
@@ -71,3 +71,12 @@
         margin-top: 1.4rem;
     }
 </style>
+
+<!-- 引入mathjax -->
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        elements: ['']
+    });
+</script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
