[feature] 增加数学公式支持

--- a/src/main/resources/templates/themes/theme_ifish/post.html
+++ b/src/main/resources/templates/themes/theme_ifish/post.html
@@ -34,4 +34,15 @@
             #include('./partial/comments.html')
         </div>
     </div>
+
+    <!-- 引入mathjax -->
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            elements: [document.getElementById('content')]
+        });
+    </script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+
+
     #include('./partial/footer.html')
