[hotfix] 将mathjax引用的cdn地址修改为https

--- a/src/main/resources/templates/admin/article/_header.html
+++ b/src/main/resources/templates/admin/article/_header.html
@@ -78,5 +78,5 @@
         elements: ['']
     });
 </script>
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+<script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
