--- a/src/main/resources/templates/themes/theme_ifish/post.html
+++ b/src/main/resources/templates/themes/theme_ifish/post.html
@@ -41,7 +41,7 @@
             elements: [document.getElementById('content')]
         });
     </script>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    <script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
 
 
