--- a/src/main/resources/templates/themes/theme_ifish/partial/header.html
+++ b/src/main/resources/templates/themes/theme_ifish/partial/header.html
@@ -53,9 +53,11 @@
                     <a class="social zhihu" target="blank" href="${social_link('zhihu')}"><i class="iconfont icon-zhihu"></i></a>
                     #end
                     -->
+                    <!-- 暂时不需要显示微信二维码
                     <div id="wechat">
                         <img src="${theme_url('/static/images/avatar.png')}" />
                     </div>
+                    -->
                 </div>
             </nav>
         </header>
