[release] 修复关于页面编辑bug

--- a/src/main/resources/templates/admin/page/new.html
+++ b/src/main/resources/templates/admin/page/new.html
@@ -84,6 +84,7 @@
 </div>
 
 #include('../article/_footer.html')
+<script src="/static/admin/js/base64.js" ></script>
 <script src="/static/admin/js/new_page.js?v=${version}" ></script>
 </body>
 </html>
