--- a/src/main/resources/templates/admin/page/edit.html
+++ b/src/main/resources/templates/admin/page/edit.html
@@ -84,6 +84,7 @@
     </div>
 </div>
 #include('../article/_footer.html')
+<script src="/static/admin/js/base64.js" ></script>
 <script src="/static/admin/js/edit_page.js?v=${version}" ></script>
 </body>
 </html>
